# ZP1

./: AIR_CONSTRAINTS_COMPLETE.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  M4_BENCHMARKS.md  PROJECT_STATUS.md  README.md  WORKING_DEMO.md  demo.sh
crates/air/src/: cpu.rs  rv32im.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/delegation/: Cargo.toml
crates/delegation/benches/: crypto_bench.rs
crates/delegation/src/: ecrecover.rs  ed25519.rs  keccak.rs  lib.rs  ripemd160.rs  secp256r1.rs  sha256.rs
crates/ethereum/: ARCHITECTURE.md
crates/ethereum/guest/: Cargo.toml
crates/ethereum/guest/src/: main.rs
crates/ethereum/src/: evm.rs  fetcher.rs  guest_executor.rs  lib.rs  prover.rs  rpc_db.rs
crates/executor/: Cargo.toml
crates/executor/benches/: syscall_bench.rs
crates/executor/src/: cpu.rs  decode.rs  elf.rs  error.rs  lib.rs  memory.rs  syscall.rs  trace.rs
crates/executor/tests/: test_ecrecover.rs  test_keccak.rs  test_ripemd160.rs  test_sha256.rs
crates/primitives/: Cargo.toml
crates/primitives/benches/: m31_sbox.rs
crates/primitives/src/: circle.rs  extension.rs  field.rs  lib.rs  p3_interop.rs
crates/prover/: Cargo.toml
crates/prover/src/: bitwise_tables.rs  channel.rs  commitment.rs  delegation.rs  fri.rs  lde.rs  lib.rs  logup.rs  memory.rs  parallel.rs  ram.rs  recursion.rs  serialize.rs  snark.rs  stark.rs
crates/prover/src/gpu/: backend.rs  cuda.rs  metal.rs  mod.rs  operations.rs
crates/tests/: Cargo.toml
crates/tests/src/: encode.rs  lib.rs  pipeline.rs  programs.rs
crates/trace/src/: columns.rs
crates/verifier/src/: verify.rs
crates/zkvm/: Cargo.toml  README.md
crates/zkvm/src/: io.rs  lib.rs  prelude.rs  syscalls.rs
docs/: ACTION_PLAN.md  CONCEPTS.md  ECRECOVER_ACCELERATION.md  ETHEREUM_QUICKSTART.md  IMPLEMENTATION_STATUS.md  KECCAK_ACCELERATION.md  KECCAK_SUMMARY.md  PROGRESS.md  SECURITY_AUDIT.md  SPEC.md  USER_GUIDE.md  WHITEPAPER.md  WHITEPAPER_PDF.md  architecture.md  architecture.mmd
examples/: .gitignore  Cargo.toml  EXAMPLES_SUMMARY.md  PERFORMANCE_DEMO.md  README.md  build_all.sh  crypto_demo.rs  link.x  performance_demo.py
examples/.cargo/: config.toml
examples/ecrecover/: Cargo.toml  README.md
examples/ecrecover/src/: main.rs
examples/fibonacci/: Cargo.toml  README.md
examples/fibonacci/src/: main.rs
examples/guest-hello/: Cargo.toml  README.md
examples/guest-hello/src/: main.rs
examples/keccak/: Cargo.toml  README.md
examples/keccak/src/: main.rs
examples/memory-test/: Cargo.toml  README.md
examples/memory-test/src/: main.rs
examples/sha256/: Cargo.toml  README.md
examples/sha256/src/: main.rs
