[package]
name = "zp1-delegation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zp1-primitives = { workspace = true }
serde = { workspace = true }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[dev-dependencies]
rand = { workspace = true }
hex = "0.4"
