[package]
name = "zp1-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zp1-primitives = { workspace = true }
zp1-executor = { workspace = true }
zp1-trace = { workspace = true }
zp1-air = { workspace = true }
zp1-prover = { workspace = true }
zp1-verifier = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
