[package]
name = "zp1-ethereum-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Revm for EVM execution inside zkVM
revm = { version = "3.5", default-features = false, features = ["std", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# We'll use the executor's IO for reading inputs and writing outputs
# (This would be zp1-specific IO primitives when ready)
